# parallels-course-solutions

mpi/task-1/: graph_info.txt  integral.c  integral.h  plot_graph.py
mpi/task-2/: CMakeLists.txt
mpi/task-2/include/: mpi_defs.h  mpi_error.h  utils.h
mpi/task-2/src/: main.c  mpi_error.c
